# spark-jobs-automation

./: .env  .env.template  .gitignore  Dockerfile  README.md  config.yaml  de-python-docstring-template.mustache  docker-compose.yaml  f.py  jobs-config.toml  jobs-config.yaml  notebook.ipynb  pyproject.toml  requirements.txt  run_job.sh  t.py  t.sh
.github/workflows/: python-package.yml
api/: api.py  run-api.sh  run_api.sh
config/: airflow.cfg  config.yaml
dags/: dag.py  datamart-collector-dag.py  test-dag.py
jobs/: collect_add_to_friends_recommendations_dm_job.py  collect_events_total_cnt_agg_wk_mnth_dm_job.py  collect_events_total_cnt_agg_wk_mnth_job.py  collect_users_demographic_dm_job.py  friend_recommendation_datamart.py  friend_recommendation_datamart_job.py  jobs.py  location_zone_agg_datamart.py  location_zone_agg_datamart_job.py  logger.py  move_data.py  new_job.py  project_job.py  t.py  tags_job.py  testing.py  users_info_datamart.py  users_info_datamart_job.py  utils.py
src/: __init__.py  cluster.py  config.py  datamodel.py  environ.py  exeptions.py  jobs.py  logger.py  main.py  notifyer.py  runner.py  submiter.py  submitter.py  t.py  utils.py
src/base/: __init__.py  base.py
src/cluster/: __init__.py  cluster.py  exception.py  exceptions.py
src/config/: __init__.py  config.py  exceptions.py
src/datamodel/: __init__.py  args.py  config.py
src/environ/: __init__.py  environ.py  exception.py
src/helper/: __init__.py  exceptions.py  helper.py
src/keeper/: __init__.py  keeper.py
src/logger/: __init__.py  logger.py
src/notifyer/: __init__.py  datamodel.py  exception.py  exceptions.py  notifyer.py
src/spark/: __init__.py  collector.py  mover.py  runner.py
src/submitter/: __init__.py  exception.py  exceptions.py  hand_test.py  submitter.py
src/utils/: __init__.py  environ.py  logger.py  notifyer.py
supervisor/: api.conf
templates/: .env.template  docstring-template.mustache
tests/: conftest.py  hand_test.py  hand_test_cluster.py  manage_cluster.py  move-data.py  run-job.sh  run-one-test.sh  run-test.sh  run-tests-by-tag.sh  run-tests.sh  t.sh  tag_job.py  tags_job.py  test.py  test_cluster.py  test_main.py  test_submitter.py  test_utils.py
tests/cluster/: test_cluster.py
tests/config/: test_config.py
tests/datamodel/: test_args.py  test_config.py
tests/environ/: test_environ.py
utils/: create-dataproc.sh  entrypoint.sh  project-setup.sh  setup-project.sh  setup.sh  show-project-tree.sh  test.sh  utils.sh
(+6 files in other folders)
