[tool.poetry]
name = "spark-jobs-automation"
version = "0.1.0"
description = ""
authors = ["Leonidee"]
readme = "README.md"
packages = [{include = "spark-jobs-automation"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
findspark = "^2.0.1"
requests = "^2.28.2"
python-dotenv = "^1.0.0"
coloredlogs = "^15.0.1"
boto3 = "^1.26.117"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
