[tool.poetry]
name = "spark-jobs-automation"
version = "0.1.0"
description = ""
authors = ["leonidee"]
readme = "README.md"

[tool.poetry.group.airflow.dependencies]
python = "^3.10"
requests = "2.28.2"
coloredlogs = "15.0.1"
boto3 = "1.26.117"
python-dotenv = "1.0.0"
pyyaml = "6.0"

[tool.poetry.group.dataproc.dependencies]
python = "3.8"
fastapi = "0.95.1"
uvicorn = {extras = ["standard"], version = "0.21.1"}
findspark = "2.0.1"
requests = "2.28.2"
coloredlogs = "15.0.1"
boto3 = "1.26.117"
python-dotenv = "1.0.0"
pyyaml = "6.0"

[tool.poetry.group.dev.dependencies]
pyspark = "3.2.1"
ipykernel = "6.22.0"
pandas = "2.0.1"
pyarrow = "11.0.0"

[tool.poetry.group.test.dependencies]
pytest = "7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
